--- a/UIAutoGyn/src/app/Views/veiculo-mar-mo/veiculo-mar-mo.component.html
+++ b/UIAutoGyn/src/app/Views/veiculo-mar-mo/veiculo-mar-mo.component.html
@@ -3,16 +3,58 @@
         <div>
             <BlocoComponent titulo="Cadastro de marca" descricao="Preencha os dados da marca para cadastro" textButton="Cadastrar" (foiClicado)="cadastrarMarca()">
                 <div class="conteudo">
-                    <InputsComponent text="Nome da marca" tipoInput="text" idInput="marca" placeholder="Fiat" />
+                    <InputsComponent text="Nome da marca" tipoInput="text" idInput="marca" placeholder="Fiat" [(ngModel)]="addMarca.marca" />
                 </div>
             </BlocoComponent>
             <BlocoComponent titulo="Cadastro de modelo" descricao="Preencha os dados do modelo para cadastro" textButton="Atualizar" (foiClicado)="cadastrarModelo()">
                 <div class="conteudo">
-                    <!-- SELECT MARCA ANTES -->
-                    <InputsComponent text="Nome do modelo" tipoInput="text" idInput="modelo" placeholder="Fiat Argo" />
+
+                    <!-- passar os valores -->
+                    <SelectsComponent idSelect="marca" placeholder="Selecione a marca" />
+                    <InputsComponent text="Nome do modelo" tipoInput="text" idInput="modelo" placeholder="Fiat Argo" [(ngModel)]="addModelo.modelo" />
                 </div>
             </BlocoComponent>
         </div>
         <span class="linha"></span>
+        <!-- <div>
+            <h1>Modelos e Marcas Cadastrados</h1>
+            <div class="listaCarros">
+                <div>
+                    <h2>${item.nomeMarca}</h2>
+                    <div>
+                        <p>Modelo:</p>
+                        <span class="linhaDois"></span>
+                    </div>
+                    <div class="modelos">
+                        ${item.nomeModelos.length === 0
+                            ? '<p>Nenhum modelo disponível.</p>'
+                            : item.nomeModelos.map(modelo => `<h3>${modelo}</h3>`).join('')
+                        }
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <div class="listagem">
+            <h1>Modelos e Marcas Cadastrados</h1>
+            <div class="listaCarros">
+                <div>
+                <h2>Nome da Marca</h2>
+                <div>
+                    <p>Modelo:</p>
+                    <span class="linhaDois"></span>
+                </div>
+                <div class="modelos">
+                    <!-- Caso sem modelos -->
+                    <p>Nenhum modelo disponível.</p>
+
+                    <!-- Ou, caso com modelos -->
+                    <h3>Modelo 1</h3>
+                    <h3>Modelo 2</h3>
+                    <h3>Modelo 3</h3>
+                </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </BaseLayout>
