--- a/UIAutoGyn/src/app/Views/veiculoCadAt/veiculoCadAt.component.html
+++ b/UIAutoGyn/src/app/Views/veiculoCadAt/veiculoCadAt.component.html
@@ -2,31 +2,27 @@
     <div class="pai">
         <BlocoComponent titulo="Cadastro de veiculo" descricao="Preencha os dados do veículo para cadastro" textButton="Cadastrar" (foiClicado)="cadastrarVeiculo()">
             <div class="conteudo">
-                <!-- populado pelo back -->
-                <!-- <div class="clienteSelect">
-                    <select name="id_cliente" id="id_cliente" required>
-                    </select>
-                </div> -->
+                <!-- passar os valores -->
+                <SelectsComponent idSelect="proprietario" placeholder="Selecione o proprietário" />
                 <div>
                     <InputsComponent text="Placa" tipoInput="text" idInput="placa" placeholder="ABCD1234" [(ngModel)]="addVeiculo.placa" />
                     <div class="juntos">
                         <InputsComponent text="Ano de fabricação" tipoInput="number" idInput="anoFabricado" placeholder="2023" [(ngModel)]="addVeiculo.anoFabricacao" />
                         <InputsComponent text="Ano do modelo" tipoInput="number" idInput="anoModelo" placeholder="2023" [(ngModel)]="addVeiculo.anoModelo" />
                     </div>
-                    <!-- populado pelo back -->
-                    <!-- <div class="marcaSelect">
-                        <select name="id_marca" id="id_marca" required>
-                        </select>
-                    </div> -->
-        
-                    <!-- populado pelo back (depende de marca) -->
-                    <!-- <div class="modeloSelect">
-                        <select name="id_modelo" id="id_modelo" required>
-                        </select>
-                    </div> -->
+
+                    <!-- passar os valores -->
+                    <SelectsComponent idSelect="marca" placeholder="Selecione a marca" />
+
+                    <!-- passar os valores - popular so dps de marca -->
+                    <SelectsComponent idSelect="modelo" placeholder="Selecione o modelo" />
+
                     <InputsComponent text="Quilometragem" tipoInput="number" idInput="km" placeholder="50000" [(ngModel)]="addVeiculo.kms" />
                     <InputsComponent text="Número do chassi" tipoInput="text" idInput="chassi" placeholder="4455QW456UUHG4" [(ngModel)]="addVeiculo.numChassi" />
                     <InputsComponent text="Número do patrimônio" tipoInput="number" idInput="numPatrimonio" placeholder="1568" [(ngModel)]="addVeiculo.numPatrimonio" />
+                    
+                    <!-- passa os valores -->
+                    <SelectsMultiploComponent idSelect="acessorios" placeholder="Selecione os acessórios" tipo="Acessórios" />
                 </div>
             </div>
         </BlocoComponent>
@@ -36,6 +32,9 @@
                 <div>
                     <InputsComponent text="Placa do carro" tipoInput="text" idInput="placaSearch" placeholder="ABCD1234" />
                     <InputsComponent text="Nova quilometragem" tipoInput="number" idInput="novaKm" placeholder="564564" />
+
+                    <!-- passar os valores -->
+                    <SelectsComponent idSelect="proprietario" placeholder="Selecione o novo proprietário" />
                 </div>
             </div>
         </BlocoComponent>
