--- a/UIAutoGyn/src/styles.css
+++ b/UIAutoGyn/src/styles.css
@@ -31,6 +31,10 @@ h2, h3{
     font-size: 18px;
 }
 
+select{
+    font-size: 14px;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     appearance: none;
