praticamente finalizado a parte de inicio de visualização

--- a/UIAutoGyn/src/app/Views/acessorios/acessorios.component.html
+++ b/UIAutoGyn/src/app/Views/acessorios/acessorios.component.html
@@ -6,5 +6,6 @@
             </div>
         </BlocoComponent>
         <span class="linha"></span>
+        <ListagemSimplesComponent titulo="Acessórios Cadastrados" descricao="Sem acessórios cadastrados." [numGap]="3" />
     </div>
 </BaseLayout>
