--- a/UIAutoGyn/src/app/Views/cadastro-ser-pe/cadastro-ser-pe.component.html
+++ b/UIAutoGyn/src/app/Views/cadastro-ser-pe/cadastro-ser-pe.component.html
@@ -18,5 +18,6 @@
             </BlocoComponent>
         </div>
         <span class="linha"></span>
+        <ListagemSimplesComponent titulo="Serviços Cadastrados" descricao="Sem serviços cadastrados." [numGap]="3" />
     </div>
 </BaseLayout>
