--- a/UIAutoGyn/src/app/Views/veiculo-mar-mo/veiculo-mar-mo.component.html
+++ b/UIAutoGyn/src/app/Views/veiculo-mar-mo/veiculo-mar-mo.component.html
@@ -34,27 +34,6 @@
                 </div>
             </div>
         </div> -->
-        <div class="listagem">
-            <h1>Modelos e Marcas Cadastrados</h1>
-            <div class="listaCarros">
-                <div>
-                <h2>Nome da Marca</h2>
-                <div>
-                    <p>Modelo:</p>
-                    <span class="linhaDois"></span>
-                </div>
-                <div class="modelos">
-                    <!-- Caso sem modelos -->
-                    <p>Nenhum modelo disponível.</p>
-
-                    <!-- Ou, caso com modelos -->
-                    <h3>Modelo 1</h3>
-                    <h3>Modelo 2</h3>
-                    <h3>Modelo 3</h3>
-                </div>
-                </div>
-            </div>
-        </div>
-
+        <ListagemComCategoriaComponent titulo="Modelos e Marcas Cadastrados" descricao="Sem modelos e marcas cadastradas." />
     </div>
 </BaseLayout>
