--- a/UIAutoGyn/src/app/Views/gerenc-os/gerenc-os.component.css
+++ b/UIAutoGyn/src/app/Views/gerenc-os/gerenc-os.component.css
@@ -1,8 +1,8 @@
 .pai{
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 0.1fr 1fr;
-    gap: 20px;
+    grid-template-rows: 1fr 0.1fr 1fr;
+    gap: 30px;
 
     &>div{
         display: flex;
@@ -13,8 +13,12 @@
 
 .conteudo{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 20px;
+
+    &>div{
+        width: 100%;
+    }
     
     &>div, &>div>div{
         display: flex;
@@ -35,5 +39,11 @@
     justify-self: center;
     height: auto;
     width: 1px;
+    background-color: var(--borda);
+}
+
+.linhaDois{
+    height: 1px;
+    width: 100%;
     background-color: var(--borda);
 }
