--- a/UIAutoGyn/src/app/Views/estoque/estoque.component.html
+++ b/UIAutoGyn/src/app/Views/estoque/estoque.component.html
@@ -1,5 +1,5 @@
 <BaseLayout>
     <div class="pai">
-        <ListagemSemCategoriaComponent titulo="Peças no Estoque" descricao="Sem peças cadastradas." [campos]="campos" />
+        <ListagemSemCategoriaComponent titulo="Peças no Estoque" descricao="Sem peças cadastradas." [campos]="campos" [itens]="pecasListagem" />
     </div>
 </BaseLayout>
