add listagem e cadastro de acessorios, peças e colaborador

--- a/UIAutoGyn/src/app/Components/bloco/bloco.component.html
+++ b/UIAutoGyn/src/app/Components/bloco/bloco.component.html
@@ -6,6 +6,6 @@
 
     <form>
         <ng-content></ng-content>
-        <ButtonsComponent [text]="textButton" (click)="clicado()" />
+        <ButtonsComponent [text]="textButton" (click)="clicado($event)" />
     </form>
 </div>
