--- a/UIAutoGyn/src/app/Views/cadastro-colab/cadastro-colab.component.html
+++ b/UIAutoGyn/src/app/Views/cadastro-colab/cadastro-colab.component.html
@@ -7,6 +7,6 @@
             </div>
         </BlocoComponent>
         <span class="linha"></span>
-        <ListagemSimplesComponent titulo="Colaboradores Cadastrados" descricao="Sem colaboradores cadastrados." [numGap]="3" />
+        <ListagemSimplesComponent titulo="Colaboradores Cadastrados" descricao="Sem colaboradores cadastrados." [numGap]="2" [itens]="colaboradoresListagem" />
     </div>
 </BaseLayout>
