--- a/UIAutoGyn/src/app/Components/listagem-com-categoria/listagem-com-categoria.component.html
+++ b/UIAutoGyn/src/app/Components/listagem-com-categoria/listagem-com-categoria.component.html
@@ -1,19 +1,16 @@
 <div class="listagem">
-    <h1>{{titulo}}</h1>
-    <div class="conteudo" *ngIf="itens.length != 0">
-        <!-- for nos itens -->
-        <div>
-            <h2>Marca</h2>
-            <div class="head">
-                <p>Modelo: </p>
-                <span class="linhaDois"></span>
-            </div>
-            <div class="infos">
-                <h3>a</h3>
-                <h3>a</h3>
-                <h3>a</h3>
-            </div>
-        </div>
+  <h1>{{ titulo }}</h1>
+  <div class="conteudo" *ngIf="itens.length != 0">
+    <div *ngFor="let item of itens">
+      <h2>{{ item.nomeMarca }}</h2>
+      <div class="head">
+        <p>Modelos:</p>
+        <span class="linhaDois"></span>
+      </div>
+      <div class="infos">
+        <h3 *ngFor="let modelo of item.nomeModelos">{{ modelo }}</h3>
+      </div>
     </div>
-    <p *ngIf="itens.length == 0">{{descricao}}</p>
+  </div>
+  <p *ngIf="itens.length == 0">{{ descricao }}</p>
 </div>
