--- a/UIAutoGyn/src/app/Views/acessorios/acessorios.component.html
+++ b/UIAutoGyn/src/app/Views/acessorios/acessorios.component.html
@@ -2,7 +2,7 @@
     <div class="pai">
         <BlocoComponent titulo="Cadastro de acessórios" descricao="Preencha os dados do acessorio para cadastro" textButton="Cadastrar" (foiClicado)="cadastrarAcessorio()">
             <div class="conteudo">
-                <InputsComponent text="Nome do acessório" tipoInput="text" idInput="acessorio" placeholder="Capa de volante" [(ngModel)]="addAcessorio.acessorio" />
+                <InputsComponent text="Nome do acessório" tipoInput="text" idInput="acessorio" placeholder="Capa de volante" [(ngModel)]="addAcessorio.descricao" />
             </div>
         </BlocoComponent>
         <span class="linha"></span>
