--- a/UIAutoGyn/src/app/Views/veiculo-mar-mo/veiculo-mar-mo.component.html
+++ b/UIAutoGyn/src/app/Views/veiculo-mar-mo/veiculo-mar-mo.component.html
@@ -3,37 +3,17 @@
         <div>
             <BlocoComponent titulo="Cadastro de marca" descricao="Preencha os dados da marca para cadastro" textButton="Cadastrar" (foiClicado)="cadastrarMarca()">
                 <div class="conteudo">
-                    <InputsComponent text="Nome da marca" tipoInput="text" idInput="marca" placeholder="Fiat" [(ngModel)]="addMarca.marca" />
+                    <InputsComponent text="Nome da marca" tipoInput="text" idInput="marca" placeholder="Fiat" [(ngModel)]="addMarca.nome" />
                 </div>
             </BlocoComponent>
             <BlocoComponent titulo="Cadastro de modelo" descricao="Preencha os dados do modelo para cadastro" textButton="Atualizar" (foiClicado)="cadastrarModelo()">
                 <div class="conteudo">
-
-                    <!-- passar os valores -->
-                    <SelectsComponent idSelect="marca" placeholder="Selecione a marca" />
-                    <InputsComponent text="Nome do modelo" tipoInput="text" idInput="modelo" placeholder="Fiat Argo" [(ngModel)]="addModelo.modelo" />
+                    <SelectsComponent idSelect="marca" placeholder="Selecione a marca" [opcoes]="marcas" (selecionado)="addModelo.marca.id = $event" />
+                    <InputsComponent text="Nome do modelo" tipoInput="text" idInput="modelo" placeholder="Fiat Argo" [(ngModel)]="addModelo.nome" />
                 </div>
             </BlocoComponent>
         </div>
         <span class="linha"></span>
-        <!-- <div>
-            <h1>Modelos e Marcas Cadastrados</h1>
-            <div class="listaCarros">
-                <div>
-                    <h2>${item.nomeMarca}</h2>
-                    <div>
-                        <p>Modelo:</p>
-                        <span class="linhaDois"></span>
-                    </div>
-                    <div class="modelos">
-                        ${item.nomeModelos.length === 0
-                            ? '<p>Nenhum modelo disponível.</p>'
-                            : item.nomeModelos.map(modelo => `<h3>${modelo}</h3>`).join('')
-                        }
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <ListagemComCategoriaComponent titulo="Modelos e Marcas Cadastrados" descricao="Sem modelos e marcas cadastradas." />
+        <ListagemComCategoriaComponent titulo="Modelos e Marcas Cadastrados" descricao="Sem modelos e marcas cadastradas." [itens]="listagemMarcaModelo" />
     </div>
 </BaseLayout>
