--- a/UIAutoGyn/src/app/Views/gerenc-os/gerenc-os.component.html
+++ b/UIAutoGyn/src/app/Views/gerenc-os/gerenc-os.component.html
@@ -6,7 +6,7 @@
                     <!-- passar os valores -->
                     <SelectsComponent idSelect="veiculo" placeholder="Selecione o veículo" />
                     <!-- LISTAGEM DE SERVICOS -->
-                    <SelectsMultiploComponent idSelect="servicos" placeholder="Selecione os serviços" tipo="Serviços" />
+                    <SelectsMultiploComponent idSelect="servicos" placeholder="Selecione os serviços" tipo="Serviços" [opcoes]="servicos" />
                 </div>
                 <span class="linha"></span>
                 <div>
