--- a/UIAutoGyn/src/app/Components/selects-multiplo/selects-multiplo.component.html
+++ b/UIAutoGyn/src/app/Components/selects-multiplo/selects-multiplo.component.html
@@ -8,7 +8,7 @@
             type="checkbox"
             [value]="opcao.descricao"
             class="acessorio-checkbox"
-            (click)="addRem(opcao.descricao)"
+            (click)="addRem(opcao)"
             [checked]="opcoesSelected.includes(opcao.descricao)"
           />
           {{ opcao.descricao }}
@@ -19,7 +19,7 @@
   <p class="selected-options">
     {{ tipo }}:
     <span *ngFor="let opcao of opcoesSelected; let i = index">
-      {{ opcao }}<span *ngIf="i < opcoesSelected.length - 1">, </span>
+      {{ opcao.descricao }}<span *ngIf="i < opcoesSelected.length - 1">, </span>
     </span>
   </p>
 </div>
