add modificacoes ai

--- a/UIAutoGyn/src/app/Layouts/base/base.component.html
+++ b/UIAutoGyn/src/app/Layouts/base/base.component.html
@@ -7,10 +7,8 @@
         <nav>
             <a (click)="opcoesVeiculo = !opcoesVeiculo"><img src="veiculo.svg" alt="" width="20"> Veiculos</a>
             <ul *ngIf="opcoesVeiculo">
-                <li><a routerLink="/veiculoCadAt" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Cadastrar | Atualizar</a></li>
-                <li><a routerLink="/veiculoMarMo" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Marca | Modelo</a></li>
-                <li><a routerLink="/acessorios" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Acessórios</a></li>
-                <li><a routerLink="/veiculos" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Listar Veiculos</a></li>
+                <li><a routerLink="/veiculos" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Cadastrar | Listar</a></li>
+                <li><a routerLink="/veiculoMarMo" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Marca | Modelo</a></li>                
             </ul>
             <a routerLink="/clientes" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><img src="cliente.svg" alt="" width="20"> Clientes</a>
             <a (click)="opcoesOS = !opcoesOS"><img src="ordem.svg" alt="" width="20"> Ordem de Serviço</a>
