--- a/UIAutoGyn/src/app/Components/selects/selects.component.html
+++ b/UIAutoGyn/src/app/Components/selects/selects.component.html
@@ -1,5 +1,5 @@
-<select [name]="idSelect" [id]="idSelect" [ngModel]="valorSelecionado" (ngModelChange)="onChange($event)">
-    <option value="" disabled selected hidden> {{ placeholder }} </option>
+<select [name]="idSelect" [id]="idSelect" [(ngModel)]="valorSelecionado" (ngModelChange)="onChange($event)">
+  <option value="" disabled selected hidden> {{ placeholder }} </option>
   <option *ngFor="let op of opcoes" [value]="op.id">
     {{ op.nome || op.nomeFormatado }}
   </option>
