--- a/UIAutoGyn/src/app/Views/gerenc-os/gerenc-os.component.css
+++ b/UIAutoGyn/src/app/Views/gerenc-os/gerenc-os.component.css
@@ -30,7 +30,7 @@
     
     & .juntos{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr) 0.1fr;
         gap: 20px;
     }
 }
@@ -46,4 +46,23 @@
     height: 1px;
     width: 100%;
     background-color: var(--borda);
+}
+
+.icon-close {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.875rem; 
+  border-radius: 0.375rem; 
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: #f87171;
+  height: 2.5rem;
+  width: 2.5rem; 
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.icon-close:hover {
+  background-color: #fcd5d5;
 }
