mudando status os

--- a/UIAutoGyn/src/app/Components/listagem-sem-categoria/listagem-sem-categoria.component.css
+++ b/UIAutoGyn/src/app/Components/listagem-sem-categoria/listagem-sem-categoria.component.css
@@ -29,6 +29,16 @@
     padding-right: 10px;
 }
 
+.item{
+    padding: 8px;
+    
+    &.os:hover{
+        cursor: pointer;
+        border-radius: 8px;
+        background-color: var(--meioBranco);
+    }
+}
+
 .head {
     display: grid;
     grid-template-columns: auto 1fr;
