--- a/UIAutoGyn/src/app/Views/gerenc-os/gerenc-os.component.html
+++ b/UIAutoGyn/src/app/Views/gerenc-os/gerenc-os.component.html
@@ -21,6 +21,6 @@
             </div>
         </BlocoComponent>
         <span class="linhaDois"></span>
-        <ListagemSemCategoriaComponent titulo="Ordens de Serviço" descricao="Sem OS cadastradas." [campos]="campos" />
+        <ListagemSemCategoriaComponent variant="os" titulo="Ordens de Serviço" descricao="Sem OS cadastradas." [campos]="campos" [itens]="ordensListagem" />
     </div>
 </BaseLayout>
